--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.boxContainer{
-  background-color: rgba(196, 194, 194, 0.652);
-}
 .Card{
   padding: 5rem;
   width: 30rem;
@@ -12,7 +5,15 @@
 }
 .output{
   padding: 1rem;
-  background: #5a5978;
+  background: #786859;
   border-radius: 1.5rem;
   color: #fff;
+  height: min-content;
+}
+.centerAlert{
+  justify-content: center !important;
+}
+html{
+  background-color: rgba(196, 194, 194, 0.652);
+
 }
