--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,9 @@ html{
 .centerAlert{
   justify-content: center !important;
 }
+
+@media only screen and (max-width: 600px) {
+  .textField{
+    margin-top: 1rem !important;
+  }
+}
